// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAll should be unchecked when there is no items 1`] = `
<form
  className="theme-container"
>
  <span
    className="theme-checkbox"
  >
    <input
      aria-checked={false}
      aria-disabled={true}
      checked={false}
      disabled={true}
      id="checkbox--id-42"
      onChange={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onKeyDown={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      readOnly={false}
      style={
        {
          "pointerEvents": "none",
        }
      }
      type="checkbox"
    />
    <label
      className="theme-label theme-label_inline"
      htmlFor="checkbox--id-42"
    >
      Select all
    </label>
  </span>
</form>
`;

exports[`SelectAll should render 1`] = `
<form
  className="theme-container"
>
  <span
    className="theme-checkbox"
  >
    <input
      aria-checked={false}
      checked={false}
      id="checkbox--id-42"
      onChange={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onKeyDown={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      readOnly={false}
      type="checkbox"
    />
    <label
      className="theme-label theme-label_inline"
      htmlFor="checkbox--id-42"
    >
      Select all
    </label>
  </span>
</form>
`;

exports[`SelectAll should render id if provided 1`] = `
<form
  className="theme-container"
>
  <span
    className="theme-checkbox"
  >
    <input
      aria-checked={false}
      checked={false}
      id="list-toolbar-check-all"
      name="list-toolbar-check-all"
      onChange={[Function]}
      onClick={[Function]}
      onClickCapture={[Function]}
      onKeyDown={[Function]}
      onKeyPressCapture={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      readOnly={false}
      type="checkbox"
    />
    <label
      className="theme-label theme-label_inline"
      htmlFor="list-toolbar-check-all"
    >
      Select all
    </label>
  </span>
</form>
`;
